--- a/cpp/task01/Makefile
+++ b/cpp/task01/Makefile
@@ -1,6 +1,6 @@
 CC=g++
 CFLAGS=-I../sndfile/
-LDFLAGS= -lsndfile -L../sndfile/
+LDFLAGS= -lsndfile
 
 all:
 	$(CC) -o task01 task01.cpp $(CFLAGS) $(LDFLAGS)
