--- a/cpp/task02/Makefile
+++ b/cpp/task02/Makefile
@@ -1,7 +1,7 @@
 CC=g++
 CFLAGS=-I../sndfile/ -std=c++11
-#LDFLAGS= -lsndfile 
-LDFLAGS= -lsndfile -L../sndfile/
+LDFLAGS= -lsndfile 
+#LDFLAGS= -lsndfile -L../sndfile/
 
 all:
 	$(CC) -o oscillator oscillator.cpp $(CFLAGS) $(LDFLAGS)
