--- a/cpp/task04/Makefile
+++ b/cpp/task04/Makefile
@@ -1,7 +1,7 @@
 CC=g++
 CFLAGS=-I../sndfile/ -std=c++11
-#LDFLAGS= -lsndfile
-LDFLAGS= -lsndfile -L../sndfile/
+LDFLAGS= -lsndfile
+#LDFLAGS= -lsndfile -L../sndfile/
 
 all:
 	$(CC) -o melody melody.cpp $(CFLAGS) $(LDFLAGS)
